<resources>
    <string name="app_name">FizzBuzz</string>
    <string name="about">About app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="startGame">Start</string>

    <string name="textview">TextView</string>
    <string name="fizz">Fizz</string>
    <string name="buzz">Buzz</string>
    <string name="fizzbuzz">FizzBuzz</string>
    <string name="next_number">Next Number</string>
    <string name="number">0</string>
    <string name="todo">TODO</string>
    <string name="About_app">Pravila \n Prvi broj je slucajan i korisnik pogada izmedu tri ponuden opcije \n Fizz -> Broj je djeljiv sa 3 \n Buzz -> broj je djeljiv sa 5 \n FizzBuzz -> broj je deljiv sa 3 i 5 \n </string>
    <string name="game_over">Game Over</string>
    <string name="new_game">New game</string>
    <string name="winner">Winner</string>
    <string name="back">Back</string>

</resources>