<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5eb8ff"
    tools:context=".GameFragment">

        <Button
            android:id="@+id/fizzBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="325dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/game_btn_shape"
            android:text="@string/fizz"
            app:layout_constraintBottom_toTopOf="@+id/fizzBizzBtn"
            app:layout_constraintEnd_toStartOf="@+id/buzzBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buzzBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="325dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/game_btn_shape"
            android:text="@string/buzz"
            app:layout_constraintBottom_toTopOf="@+id/fizzBizzBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fizzBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fizzBizzBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="57dp"
            android:background="@drawable/game_btn_shape"
            android:text="@string/fizzbuzz"
            app:layout_constraintBottom_toTopOf="@+id/numTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/randNum" />

        <Button
            android:id="@+id/numTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/game_btn_shape"
            android:text="@string/next_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fizzBizzBtn" />

        <TextView
            android:id="@+id/randNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="189dp"
            android:layout_marginEnd="190dp"
            android:text="@string/number"
            android:textSize="56sp"
            app:layout_constraintBottom_toTopOf="@+id/fizzBizzBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>